--- a/html/src/exercise/05_京东轮播图.html
+++ b/html/src/exercise/05_京东轮播图.html
@@ -40,7 +40,7 @@
             width: 10px;
             height: 10px;
             border-radius: 50%;
-            margin: 0 4px;
+            margin: 0px 4px;
             background-color: rgba(255, 255, 255, .3);
             /* 将背景颜色只设置到内容区，边框和内边距不再有背景颜色  */
             background-clip: content-box;
